Colaboratory를 통해 생성됨

--- a/bike_sharing_demand.ipynb
+++ b/bike_sharing_demand.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "bike sharing demand.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzvrrKm4ENF4+1CiXzlgSY",
+      "authorship_tag": "ABX9TyNiul5Cbn6p4mgXVa04BVIP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2935,7 +2935,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 최종 test data 예측"
+        "## 최종 test data 예측\n",
+        "\n",
+        "MSE가 가장 낮은 Random Forest Regressor로 모델 설정"
       ],
       "metadata": {
         "id": "vS85JtrOKQbr"
